async-icinga/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: async-icinga
  labels:
    app: async-icinga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: async-icinga
  template:
    metadata:
      labels:
        app: async-icinga
    spec:
      containers:
        - name: async-icinga
          image: registry.services.atlantishq.de/atlantishq/async-icinga
          ports:
            - containerPort: 5000
