async-icinga/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: async-icinga
  labels:
    app: async-icinga
spec:
  selector:
    app: async-icinga
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
