async-icinga/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: async-icinga
  labels:
    app: async-icinga
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: "https"
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "sso-oauth2-forward-auth-async-icinga@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - async-icinga.services.atlantishq.de
        - async-icinga.atlantishq.de
      secretName: async-icinga-tls
  rules:
    - host: async-icinga.services.atlantishq.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: async-icinga
                port:
                  number: 80
    - host: async-icinga.atlantishq.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: async-icinga
                port:
                  number: 80
